Simple overflow fix

--- a/calculator/style.css
+++ b/calculator/style.css
@@ -10,6 +10,7 @@ body {
     padding: 16px;
     border-radius: 8px;
     border: 1px solid darkgray;
+    width: 400px;
 }
 
 .display {
@@ -20,6 +21,7 @@ body {
     display: flex;
     justify-content: flex-end;
     padding-right: 12px;
+    overflow-y: hidden;
 }
 
 .display > div {
@@ -56,7 +58,8 @@ body {
     color: black;
 }
 
-.buttons > .operator {
+.buttons > .operator,
+.buttons > .equals {
     background-color: violet;
 }
 
